Add basic test configurations